force-app/main/default/objects/ssot__RecruitmentRequisitionParticipant__dlm/fields/ssot__ParticipantRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantRole__c</fullName>
    <label>Participant Role</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>