force-app/main/default/objects/ssot__RecruitmentRequisitionParticipant__dlm/fields/ssot__rel_1728019777616_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1728019777616_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecruitmentRequisitionParticipant_Pa_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>RecruitmentRequisitionParticipant_Pa_rel</relationshipLabel>
    <relationshipName>rel_1728019777616_end</relationshipName>
    <type>Lookup</type>
</CustomField>