force-app/main/default/objects/ssot__RecruitmentRequisitionParticipant__dlm/fields/ssot__rel_1729227490552_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729227490552_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecruitmentRequisitionParticipant_Re_rel</label>
    <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
    <relationshipLabel>RecruitmentRequisitionParticipant_Re_rel</relationshipLabel>
    <relationshipName>rel_1729227490552_end</relationshipName>
    <type>Lookup</type>
</CustomField>